@@ -1,4 +1,11 @@
 1.2.1 - TBD
+    * Made the Launcher less verbose in the absence of errors
+    * The debug console now does not close automatically if the Chunky process
+    exits abnormally
+    * If the Chunky process fails the launcher will no longer close directly
+    and will instead display a dialog informing the user of the abnormal
+    Chunky termination
+    * Added Launch Error dialog which displays if Chunky failed to launch
     * Fixed error that caused a render dump to be saved each frame if the
     "save dump" checkbox was unchecked
     * Fixed error in launcher which forced launcher to display even during
